--- a/unit1-videos.html
+++ b/unit1-videos.html
@@ -15,14 +15,14 @@
         
         <details class="day-section" open><summary><h2>1. Sound /i:/</h2></summary>
             <div class="video-gallery">
-                <div class="video-card"><h3>Eat</h3><video controls src="videos/eat.mp4"></video></div>
-                <div class="video-card"><h3>Feel</h3><video controls src="videos/feel.mp4"></video></div>
-                <div class="video-card"><h3>Please</h3><video controls src="videos/please.mp4"></video></div>
-                <div class="video-card"><h3>Please, Take a Seat</h3><video controls src="videos/please_take_a_seat.mp4"></video></div>
-                <div class="video-card"><h3>Seat</h3><video controls src="videos/seat.mp4"></video></div>
-                <div class="video-card"><h3>See</h3><video controls src="videos/see.mp4"></video></div>
-                <div class="video-card"><h3>Sheep</h3><video controls src="videos/sheep.mp4"></video></div>
-                <div class="video-card"><h3>Sleep</h3><video controls src="videos/sleep.mp4"></video></div>
+                <div class="video-card"><h3>Eat</h3><video controls src="videos/Eat.mp4"></video></div>
+                <div class="video-card"><h3>Feel</h3><video controls src="videos/Feel.mp4"></video></div>
+                <div class="video-card"><h3>Please</h3><video controls src="videos/Please.mp4"></video></div>
+                <div class="video-card"><h3>Please, Take a Seat</h3><video controls src="videos/Please_take_a_seat.mp4"></video></div>
+                <div class="video-card"><h3>Seat</h3><video controls src="videos/Seat.mp4"></video></div>
+                <div class="video-card"><h3>See</h3><video controls src="videos/See.mp4"></video></div>
+                <div class="video-card"><h3>Sheep</h3><video controls src="videos/Sheep.mp4"></video></div>
+                <div class="video-card"><h3>Sleep</h3><video controls src="videos/Sleep.mp4"></video></div>
                 <div class="video-card"><h3>Speak</h3><video controls src="videos/Speak.mp4"></video></div>
                 <div class="video-card"><h3>Teacher</h3><video controls src="videos/Teacher.mp4"></video></div>
                 <div class="video-card"><h3>Vietnamese</h3><video controls src="videos/Vietnamese.mp4"></video></div>
