--- a/grammar.html
+++ b/grammar.html
@@ -3,55 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ngữ pháp - Thom's English App</title>
+    <title>Grammar Menu - Thom's English App</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="page-container">
         <header class="page-header">
-            <h1>Communicative Grammar (Ngữ pháp giao tiếp)</h1>
-            <a href="index.html" class="back-button">← Quay lại Menu</a>
+            <h1>Communicative Grammar</h1>
+            <a href="index.html" class="back-button">← Quay lại Menu Chính</a>
         </header>
-
-        <section class="exercise-card">
-            <h2>Bài tập 1: Nối câu hỏi và câu trả lời</h2>
-            <p>Nhấp vào một câu hỏi và sau đó vào câu trả lời đúng để tạo thành một cặp.</p>
-            
-            <div id="matching-game-container">
-                <div id="questions-col"></div>
-                <div id="answers-col"></div>
-            </div>
-
-            <div class="button-group">
-                <button id="check-match-button">Kiểm tra câu trả lời</button>
-                <button id="reset-match-button" class="secondary">Làm lại</button>
-            </div>
-            <p id="feedback-match"></p>
-        </section>
-
-        <section class="exercise-card">
-            <h2>Các cấu trúc giới thiệu phổ biến</h2>
-            <div class="table-container">
-                <table>
-                    <thead>
-                        <tr>
-                            <th>Câu hỏi (Questions)</th>
-                            <th>Câu trả lời của bạn (Your answers)</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr><td>What's your name? / How do you spell your name?</td><td>My name is... / You can call me... / It's spelled...</td></tr>
-                        <tr><td>How old are you?</td><td>I'm ... years old.</td></tr>
-                        <tr><td>What's your phone number?</td><td>My phone number is...</td></tr>
-                        <tr><td>Where are you from? / Where is your hometown? / Where are you living?</td><td>I'm from... / I come from... / My hometown is... / I'm living in...</td></tr>
-                        <tr><td>What do you do? / What do you do for a living?</td><td>I'm a... / I'm working as...</td></tr>
-                        <tr><td>Which company are you working in? / Where are you working?</td><td>I'm working at... / My company is...</td></tr>
-                        <tr><td>What do you usually do in your free time? / What are you into?</td><td>I usually... / I like / love... / I'm into...</td></tr>
-                    </tbody>
-                </table>
-            </div>
-        </section>
+        <nav class="main-menu">
+            <ul>
+                <li><a href="unit1-grammar.html">Unit 1: Self-introduction</a></li>
+                <li><a href="unit6-grammar.html">Unit 6: Shopping</a></li>
+            </ul>
+        </nav>
     </div>
-    <script src="grammar.js"></script>
 </body>
 </html>
