--- a/videos.html
+++ b/videos.html
@@ -16,7 +16,8 @@
         <nav class="main-menu">
             <ul>
                 <li><a href="unit1-videos.html">Unit 1</a></li>
-                </ul>
+                <li><a href="unit6-videos.html">Unit 6</a></li>
+            </ul>
         </nav>
     </div>
 </body>
