--- a/vocabulary.html
+++ b/vocabulary.html
@@ -3,45 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Từ vựng - Thom's English App</title>
+    <title>Vocabulary Menu - Thom's English App</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
     <div class="page-container">
         <header class="page-header">
-            <h1>Vocabulary (Từ vựng)</h1>
-            <a href="index.html" class="back-button">← Quay lại Menu</a>
+            <h1>Vocabulary</h1>
+            <a href="index.html" class="back-button">← Quay lại Menu Chính</a>
         </header>
 
-        <section class="exercise-card">
-            <h2>Bài tập 1: Sắp xếp từ</h2>
-            <p>Kéo các từ từ ngân hàng từ và thả chúng vào đúng danh mục.</p>
-            
-            <div id="word-bank"></div>
-
-            <div id="categories-container"></div>
-
-            <div class="button-group">
-                <button id="check-dnd-button">Kiểm tra Bài tập 1</button>
-                <button id="reset-dnd-button" class="secondary">Làm lại Bài tập 1</button>
-            </div>
-        </section>
-
-        <section class="exercise-card">
-            <h2>Bài tập 2: Hoàn thành câu</h2>
-            <p><strong>Hướng dẫn:</strong> Nhấp vào một khoảng trống trong câu, sau đó nhấp vào từ đúng từ hộp bên dưới để điền vào. Không cần gõ!</p>
-            
-            <div id="fill-in-word-box" class="word-bank-style"></div>
-
-            <div id="fill-in-the-blanks-container"></div>
-            <div class="button-group">
-                <button id="check-fill-in-button">Kiểm tra Bài tập 2</button>
-            </div>
-            <p id="feedback-fill-in"></p>
-        </section>
+        <nav class="main-menu">
+            <ul>
+                <li><a href="unit1-vocabulary.html">Unit 1: Self-introduction</a></li>
+                <li><a href="unit6-vocabulary.html">Unit 6: Shopping</a></li>
+                </ul>
+        </nav>
     </div>
-
-    <script src="vocabulary.js"></script>
 </body>
 </html>
