--- a/workbook.html
+++ b/workbook.html
@@ -3,73 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sách bài tập - Thom's English App</title>
+    <title>Workbook Menu - Thom's English App</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="page-container">
         <header class="page-header">
-            <h1>Workbook (Sách bài tập)</h1>
-            <a href="index.html" class="back-button">← Quay lại Menu</a>
+            <h1>Workbook</h1>
+            <a href="index.html" class="back-button">← Quay lại Menu Chính</a>
         </header>
-
-        <details class="day-section">
-            <summary><h2>Day 1</h2></summary>
-            <div class="day-content">
-                <section class="exercise-card">
-                    <h3>Bài tập 1: Kéo và Thả</h3>
-                    <p>Kéo các từ từ hộp bên dưới vào đúng chỗ trống trong câu.</p>
-                    <div id="wb-d1-e1-wordbox" class="word-bank-style"></div>
-                    <div id="wb-d1-e1-container"></div>
-                    <div class="button-group">
-                        <button id="check-wb-d1-e1">Kiểm tra</button>
-                    </div>
-                </section>
-                <section class="exercise-card">
-                    <h3>Bài tập 2: Nghe và đánh dấu</h3>
-                    <p>Nghe đoạn âm thanh và đánh dấu vào những cái tên bạn nghe được.</p>
-                    <div id="wb-d1-e2-container"></div>
-                    <div class="button-group">
-                        <button id="check-wb-d1-e2">Kiểm tra</button>
-                    </div>
-                </section>
-            </div>
-        </details>
-
-        <details class="day-section">
-            <summary><h2>Day 2</h2></summary>
-            <div class="day-content">
-                <section class="exercise-card">
-                    <h3>Bài tập 1: Nối từ với nghĩa</h3>
-                    <div id="wb-d2-e1-container"></div>
-                    <div class="button-group">
-                        <button id="check-wb-d2-e1">Kiểm tra</button>
-                        <button id="reset-wb-d2-e1" class="secondary">Làm lại</button>
-                    </div>
-                </section>
-                <section class="exercise-card">
-                    <h3>Bài tập 2: Chọn từ đúng</h3>
-                    <div id="wb-d2-e2-container"></div>
-                    <div class="button-group"><button id="check-wb-d2-e2">Kiểm tra</button></div>
-                </section>
-            </div>
-        </details>
-
-        <details class="day-section" open>
-            <summary><h2>Day 3</h2></summary>
-            <div class="day-content">
-                <section class="exercise-card">
-                    <h3>Bài tập 1: Sửa lỗi sai trong câu</h3>
-                    <div id="wb-d3-e1-container"></div>
-                </section>
-                <section class="exercise-card">
-                    <h3>Bài tập 2: Sắp xếp lại các từ</h3>
-                    <div id="wb-d3-e2-container"></div>
-                </section>
-            </div>
-        </details>
-
+        <nav class="main-menu">
+            <ul>
+                <li><a href="unit1-workbook.html">Unit 1: Self-introduction</a></li>
+                <li><a href="unit6-workbook.html">Unit 6: Shopping</a></li>
+            </ul>
+        </nav>
     </div>
-    <script src="workbook.js"></script>
 </body>
 </html>
